# automatic-garbanzo

./: .gitignore  Cargo.toml  README.md  shell.nix
db/: 000_init.sql
src/: cmd.rs  main.rs  process.rs  queries.rs  types.rs
